src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/C4A68.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram C4A68 {

	enum A;
	enum B {
		;
	}
	enum C {
		ENTRY, ENTRY2;
	}
}
