src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/C4A68.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.invalid;

classdiagram C4A68 {

	public enum A;
	protected enum B;
	private enum C;
	static enum D;
	final enum E;
	/ enum F;

	public enum G {
		;
	}

	public enum H {
		ENTRY;
	}

	<<aStereo>> enum I;
}